--- a/Lanyin.html
+++ b/Lanyin.html
@@ -14,12 +14,12 @@ background-attachment:fixed;
 </head>
 <body>
 <h1>繁星謠</h1>
-<h2><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">“圖蘭朵”</a>
-	<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">神曲</a>
-	<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">浮士德</a>
-	<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">暴風雨</a>
-	<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">收場詩</a>
-	<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">天真的預言</a></h2>
+<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin1.html">“圖蘭朵”</a>
+	<a href="https://dark-nighta.github.io/dark-nighta/Lanyin2.html">神曲</a>
+	<a href="https://dark-nighta.github.io/dark-nighta/Lanyin3.html">浮士德</a>
+	<a href="https://dark-nighta.github.io/dark-nighta/Lanyin4.html">暴風雨</a>
+	<a href="https://dark-nighta.github.io/dark-nighta/Lanyin5.html">收場詩</a>
+	<a href="https://dark-nighta.github.io/dark-nighta/Lanyin6.html">天真的預言</a></h2>
 <script>
 alert("繁星謠");
 </script>
