--- a/Lanyin2.html
+++ b/Lanyin2.html
@@ -146,7 +146,7 @@ background-attachment:fixed;
 <tr><td>賽琳娜:啊……啊啊啊啊啊!!!!!!!</td></tr>
 <tr><td>賽琳娜像是被抽走了脊梁一般，跪坐在了地上，發出了前所未有淒厲的哀嚎聲。</td></tr>
 </table>
-<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin1.html1">“圖蘭朵”</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin.html">首頁</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin3.html">浮士德</a></h2>
+<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin1.html">“圖蘭朵”</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin.html">首頁</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin3.html">浮士德</a></h2>
 <script>
 alert("神曲");
 </script>
